external-crates/move/crates/move-compiler/tests/move_check/parser/use_inner_scope_invalid.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/parser/use_inner_scope_invalid.move:4:13
  │
4 │         let x = 0;
  │             ^ Unused assignment for variable 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')
  │
  = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_inner_scope_invalid.move:6:9
  │
6 │         use 0x1::M::foo;
  │         ^^^
  │         │
  │         Unexpected 'use'
  │         Expected an expression term

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_inner_scope_invalid.move:6:13
  │
6 │         use 0x1::M::foo;
  │             ^^^
  │             │
  │             Unexpected '0x1'
  │             Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

